crates/strider-analyze/tests/snapshots/v3__ppc64be__calling_convention__mixed_4.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x100104a4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "11" -> "8" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "8" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "8" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "11" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "14" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "14" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "14" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "15" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "16" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "17" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0xffffffffffffffd8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "19" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "9" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "21" -> "9" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "22" -> "21" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "23" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="Neg\nu64 → u64", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "26" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "26" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "19" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "17" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0xffffffffffffffe4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "1" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "29" -> "19" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "30" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "31" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "34" -> "33" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "34" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "32" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "35" -> "32" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "35" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" -> "35" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "36" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "17" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0xfffffffffffffff4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "29" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "38" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "17" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0xffffffffffffffe8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "40" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "19" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" -> "40" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "20" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "19" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "20" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "10" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "41" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "41" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="Xor:u64", shape=box, fillcolor="#2d2d2d"];
  "43" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "11" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "44" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "45" -> "44" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "45" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "45" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "7" [label="init\nr6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "46" -> "6" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "46" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "47" -> "46" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "47" [label="init\nr5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "48" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "49" -> "48" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "49" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "50" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "52" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "52" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "52" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "51" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "53" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x203d8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="init\nr12", shape=Mdiamond, fillcolor="#1a3a5c"];
  "50" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "55" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "56" -> "50" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "46" -> "50" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "56" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "53" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x203d4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "55" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "58" -> "55" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "55" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "59" -> "55" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "59" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "5" -> "59" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "58" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "60" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "56" -> "58" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "48" -> "58" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "60" [label="StackStore u64\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "61" -> "60" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v62" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v62" -> "60" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "7" -> "60" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "61" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "63" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v64" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v64" -> "61" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "46" -> "61" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "63" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "65" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v66" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v66" -> "63" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "5" -> "63" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "65" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "67" -> "65" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v68" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v68" -> "65" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "48" -> "65" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "67" [label="StackStore u64\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "69" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v70" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v70" -> "67" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "47" -> "67" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "69" [label="StackStore u64\n→ ram[sp - 80]", shape=box3d, fillcolor="#20182a"];
  "71" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v72" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v72" -> "69" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "17" -> "69" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "71" [label="StackStore u64\n→ ram[sp + 16]", shape=box3d, fillcolor="#20182a"];
  "73" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v74" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v74" -> "71" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "75" -> "71" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "75" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "73" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "76" -> "73" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v77" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v77" -> "73" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "78" -> "73" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "78" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "76" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
