crates/strider-analyze/tests/snapshots/v3__ppc64be__calling_convention__narrow_widths.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x1001045c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "8" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "8" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "10" [label="ZeroExtend\nu16 → u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="Load u16\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "14" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0xfffffffffffffff2:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "17" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "10" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "20" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="SignExtend\nu16 → u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "21" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="Load u16\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "23" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0xfffffffffffffff4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "25" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="ZeroExtend\nu8 → u64", shape=box, fillcolor="#2d2d2d"];
  "27" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="Load u8\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "28" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0xfffffffffffffff6:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="SignExtend\nu8 → u64", shape=box, fillcolor="#2d2d2d"];
  "30" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="Load u8\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "30" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "31" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0xfffffffffffffff7:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "33" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "33" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "33" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="ZeroExtend\nu16 → u64", shape=box, fillcolor="#2d2d2d"];
  "35" -> "34" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "35" [label="Truncate\nu64 → u16", shape=box, fillcolor="#2d2d2d"];
  "36" -> "35" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "36" [label="init\nr6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "37" -> "6" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="SignExtend\nu16 → u64", shape=box, fillcolor="#2d2d2d"];
  "39" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="Truncate\nu64 → u16", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="init\nr5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "41" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "41" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="ZeroExtend\nu8 → u64", shape=box, fillcolor="#2d2d2d"];
  "43" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="Truncate\nu64 → u8", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "44" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "45" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "45" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "46" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "46" [label="SignExtend\nu8 → u64", shape=box, fillcolor="#2d2d2d"];
  "47" -> "46" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "47" [label="Truncate\nu64 → u8", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "48" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "49" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "51" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "52" -> "51" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "52" [label="ZeroExtend\nu16 → u64", shape=box, fillcolor="#2d2d2d"];
  "35" -> "52" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "50" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "53" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x204cc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="init\nr12", shape=Mdiamond, fillcolor="#1a3a5c"];
  "49" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "55" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "49" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "56" -> "49" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "56" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "57" -> "56" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "57" [label="SignExtend\nu16 → u64", shape=box, fillcolor="#2d2d2d"];
  "39" -> "57" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "55" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "58" -> "55" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "55" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "59" -> "55" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "59" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "60" -> "59" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "60" [label="ZeroExtend\nu8 → u64", shape=box, fillcolor="#2d2d2d"];
  "43" -> "60" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "58" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "61" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "58" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "62" -> "58" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "62" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "63" -> "62" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "63" [label="SignExtend\nu8 → u64", shape=box, fillcolor="#2d2d2d"];
  "47" -> "63" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "61" [label="StackStore u16\n→ ram[sp - 14]", shape=box3d, fillcolor="#20182a"];
  "64" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v65" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v65" -> "61" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "35" -> "61" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "64" [label="StackStore u16\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "66" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v67" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v67" -> "64" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "39" -> "64" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "66" [label="StackStore u8\n→ ram[sp - 10]", shape=box3d, fillcolor="#20182a"];
  "68" -> "66" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v69" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v69" -> "66" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "43" -> "66" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "68" [label="StackStore u8\n→ ram[sp - 9]", shape=box3d, fillcolor="#20182a"];
  "70" -> "68" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v71" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v71" -> "68" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "47" -> "68" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "70" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "72" -> "70" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v73" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v73" -> "70" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "40" -> "70" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "72" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "74" -> "72" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v75" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v75" -> "72" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "72" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "74" [label="StackStore u64\n→ ram[sp - 128]", shape=box3d, fillcolor="#20182a"];
  "76" -> "74" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v77" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v77" -> "74" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "15" -> "74" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "76" [label="StackStore u64\n→ ram[sp + 16]", shape=box3d, fillcolor="#20182a"];
  "78" -> "76" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v79" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v79" -> "76" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "80" -> "76" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "80" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "78" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "81" -> "78" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v82" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v82" -> "78" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "83" -> "78" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "83" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "81" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
